# HYDRAlib

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HYDRAlib.h  README.md  common.cmake  project.pros  version.py
.github/: CODE-OF-CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  SECURITY.md
.github/workflows/: pr-comment.yml  pros-build.yml
assets/: logo.txt
dependencies/: OkapiLib.cmake
docs/: chassis.md  controller.md  main.md  movement.md
firmware/: asset.cmake
include/: api.h  autons.hpp  macros.h  main.h
include/HYDRAlib/: chassis.hpp  controller.h  movement.h
include/HYDRAlib/auton/: auton-selector.hpp
include/HYDRAlib/chassis/: chassis.hpp
include/HYDRAlib/chassis/motion/: motion-profiling.hpp  pure-pursuit.hpp
include/HYDRAlib/chassis/odometry/: tracking-wheel.hpp
include/HYDRAlib/path-generation/: bezier.hpp  path-generation.hpp
include/HYDRAlib/subsystems/: four-bar.hpp  intake.hpp  piston.hpp
include/HYDRAlib/utils/: PID.hpp  PIDF.hpp  simple-moving-avg.hpp  utils.hpp
include/HYDRAlib/utils/vertex/: path-point.hpp  path-vertex.hpp  pose.hpp  vertex.hpp
libs/: CMakeLists.txt  pros.cmake  toolchain.cmake
src/: autons.cpp
src/HYDRAlib/: chassis.cpp
src/HYDRAlib/auton/: auton-selector.cpp
src/HYDRAlib/chassis/: chassis.cpp
src/HYDRAlib/chassis/motion/: motion-profiling.cpp  pure-pursuit.cpp
src/HYDRAlib/chassis/odometry/: tracking-wheel.cpp
src/HYDRAlib/path-generation/: bezier.cpp  path-generation.cpp
src/HYDRAlib/subsystems/: four-bar.cpp  intake.cpp  piston.cpp
src/HYDRAlib/utils/: PID.cpp  PIDF.cpp  simple-moving-avg.cpp  utils.cpp
src/HYDRAlib/utils/vertex/: path-point.cpp  pose.cpp  vertex.cpp
templates/v5/: chassis-template.cpp  competition-template.cpp
templates/vex U/: chassis-template.cpp  competition-template.cpp
